--- a/aa.html
+++ b/aa.html
@@ -2,17 +2,19 @@
 <html>
     <head>
       <meta charset="UTF-8"/>
-        <title>啊啊啊
+        <title>xy
         </title>
     </head>
     <body>
-      <button id="aaa">点击按钮</button>
+      <button id="aaa" style="height: 100px; width: 200px; font-size: 30px;">点击按钮</button>
      </body>
 </html>
 <script>
        document.getElementById("aaa").onclick=function(){
         while(1){
-          alert("快给我发红包！");
+          alert("全体目光向我看齐！");
+          alert("我宣布个事啊！");
+          alert("项宇是我儿子！");
         }
        }
 </script>
