--- a/wuziqi.html
+++ b/wuziqi.html
@@ -27,8 +27,8 @@
             background-size: cover;
         }
     </style>
-    <center><h1 style="font-family: Arial, Helvetica, sans-serif;"> 快乐五子棋</h1></center>
+    <center><h1 style="font-size:5em;"> 快乐五子棋</h1></center>
     &nbsp;
-    <center><button onclick="window.location.href = 'https://files.fqr-qwq.cn/wuziqi.apk'" style="font-size: large; background-color: orange;">点击此处下载</button></center>
+    <center><button onclick="window.location.href = 'https://files.fqr-qwq.cn/wuziqi.apk'" style="font-size: 3em; background-color: orange;">点击此处下载</button></center>
 </body>
 </html>
