--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -48,7 +48,7 @@
             animation-iteration-count: 1;
         }
     </style>
-    <script src="https://files.fqr-qwq.cn/project/mqtt.min.js"></script>
+    <script src="https://f.fqr-qwq.cn/project/mqtt.min.js"></script>
     <script>
         document.onselectstart=function(){return false}
         document.ondragstart=function(){return false}
