--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -206,7 +206,7 @@
         <div style="width: 100px; height: 100px; background-color: rgb(255, 255, 255); border-radius: 10px; border:1px solid rgb(200,200,200); position: absolute; left: 230px; top: 10px;">
             <center><p style="padding-top: 0px; font-size: 16px; user-select: none;">蜂鸣器</p></center>
             <center>
-                <div style="width: 28px; height: 28px; border-radius: 20px; background-color: rgb(255,255,255); border:5px solid rgb(204,204,204); cursor: pointer;" id="fmq_ball" onmousedown="fmq_open()" onmouseup="fmq_close()" onmouseout="fmq_close()"></div>
+                <div style="width: 28px; height: 28px; border-radius: 20px; background-color: rgb(255,255,255); border:5px solid rgb(204,204,204); cursor: pointer;" id="fmq_ball" onmousedown="fmq_open()" onmouseup="fmq_close()"></div>
             </center>
         </div>
         
