--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -99,7 +99,12 @@
             <center><button onclick="document.getElementById('imageInput').click()" style="margin-top: 10px;"> 选择图片 </button> <button onclick="sendimage()" style="margin-top: 10px;"> 上传 </button></center>
             <center><img src="https://f.fqr-qwq.cn/project/saoraoqi/pig.jpg" alt="选择的图片" id="previewImage" style="width: 62px; height: 62px; border:1px solid rgb(204,204,204); margin-top: 2px;" width="240px" height="240px"></center>
         </div>
-
+        <div style="width: 100%; height: 100%; position: absolute; left: 0px; top: 0px; display: none;" id="img_kuang">
+            <div style="width: 50%; height: 50%; background-color: rgb(255, 255, 255); top: 25%; left: 25%; position: absolute; border-radius: 10px; border: 5px solid rgb(200,200,200);">
+                <p style="font-size: 50px; text-align: center; line-height: 250%;color: rgb(0, 187, 16);" id="img_emoji">▶️</p>
+                <p style="font-size: 20px; text-align: center; line-height: 100%;" id="img_text">图片传送中</p>
+            </div>
+        </div>
     </div>
     <canvas id="myCanvas" width="240px" height="240px" style="display: none;"></canvas>
 
@@ -186,6 +191,16 @@
             if(topic=="fqr/saoraoqi-o/dht2")
             {
                 document.getElementById("dht2").innerText=message;
+            }
+            if(topic=="fqr/saoraoqi-o/imgend")
+            {
+                document.getElementById("img_emoji").innerText="✓";
+                document.getElementById("img_text").innerText="图片传送成功";
+                setTimeout(function() {
+                    document.getElementById("img_kuang").style.display="none";
+                    document.getElementById("img_emoji").innerText="▶️";
+                    document.getElementById("img_text").innerText="图片传送中";
+                }, 2500);
             }
         })
         
@@ -310,6 +325,7 @@
         function sendimage()
         {
             var data=ctx.getImageData(0,0,240,240).data;
+            document.getElementById("img_kuang").style.display="block";
             for(var i=0;i<240;i++)
             {
                 var str="";
