--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -167,7 +167,7 @@
         }
 
         // 连接字符串, 通过协议指定使用的连接方式
-        const connectUrl = 'wss://broker.emqx.io:8084/mqtt' //连接服务端地址，注意查看ws协议对应的端口号
+        const connectUrl = 'ws://broker.hivemq.com:8000/mqtt' //连接服务端地址，注意查看ws协议对应的端口号
         const client = mqtt.connect(connectUrl, options)
 
         client.on('connect', () => {
