--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>小猪骚扰器</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 </head>
 <body style="background-color: rgb(248,248,248)">
     <style>
