--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -168,7 +168,12 @@
 
         // 连接字符串, 通过协议指定使用的连接方式
         const connectUrl = 'ws://39.107.120.123:8083/mqtt' //连接服务端地址，注意查看ws协议对应的端口号
-        const client = mqtt.connect(connectUrl, options)
+        var client;
+        try {
+            client = mqtt.connect(connectUrl, options)
+        } catch (e) {
+            console.log("发生异常:" + e)
+        }
 
         client.on('connect', () => {
             console.log('连接成功')
