--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -123,6 +123,8 @@
 
     <canvas id="myCanvas" width="240px" height="240px" style="display: none;"></canvas>
 
+    <script src="https://f.fqr-qwq.cn/project/wx.js"></script>
+
     <script>
         document.onselectstart=function(){return false}
         document.ondragstart=function(){return false}
