--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -117,7 +117,7 @@
         </div>
 
 
-        <div style="width: 100%; height: 100%; position: absolute; left: 0px; top: 0px; display: none; background-color: rgb(200,200,200);" id="imgs"></div>
+        <div style="width: 100%; height: 1000%; position: absolute; left: 0px; top: 0px; display: none; background-color: rgb(200,200,200);" id="imgs"></div>
     </div>
     <canvas id="myCanvas" width="240px" height="240px" style="display: none;"></canvas>
 
@@ -160,11 +160,11 @@
         document.onselectstart=function(){return false}
         document.ondragstart=function(){return false}
 
-        var cnt_imgs=32;
+        var cnt_imgs=33;
         for(var i=1;i<=cnt_imgs;i++)
         {
             var newElement = document.createElement("span");
-            newElement.innerHTML = "<img src='https://f.fqr-qwq.cn/project/saoraoqi/img/"+i+".jpg' style='width: 95px; height: 95px;' width='240px' height='240px'> </img>";
+            newElement.innerHTML = "<img src='http://39.107.120.123/saoraoqi/img/"+i+".jpg' style='width: 95px; height: 95px;' width='240px' height='240px'> </img>";
             newElement.style.width="95px";
             newElement.style.height="95px";
             newElement.onclick=Function("choose_img("+i+")");
@@ -174,7 +174,7 @@
 
         function choose_img(x)
         {
-            document.getElementById('previewImage').src="https://f.fqr-qwq.cn/project/saoraoqi/img/"+x+".jpg";
+            document.getElementById('previewImage').src="http://39.107.120.123/saoraoqi/img/"+x+".jpg";
             document.getElementById("imgs").style.display="none";
         }
 
@@ -235,7 +235,7 @@
         try {
             client = mqtt.connect(connectUrl, options)
         } catch (e) {
-            window.location="http://39.107.120.123/";
+            window.location="http://39.107.120.123/saoraoqi";
         }
 
         client.on('connect', () => {
@@ -358,12 +358,11 @@
             fmq_mode=0;
         }
         window.onload = function() {
-            document.getElementById("fmq_ball").addEventListener("touchstart",fmq_open);
-            document.getElementById("fmq_ball").addEventListener("touchend",fmq_close);
-            document.getElementById("fmq_ball").addEventListener("mouseout",fmq_close);
-
-            document.getElementById("imageInput").addEventListener("change", handleFileSelect, false);
         };
+        document.getElementById("fmq_ball").addEventListener("touchstart",fmq_open);
+        document.getElementById("fmq_ball").addEventListener("touchend",fmq_close);
+        document.getElementById("fmq_ball").addEventListener("mouseout",fmq_close);
+        document.getElementById("imageInput").addEventListener("change", handleFileSelect, false);
 
         function setbulb(x)
         {
