--- a/project/saoraoqi/index.html
+++ b/project/saoraoqi/index.html
@@ -164,7 +164,7 @@
         for(var i=1;i<=cnt_imgs;i++)
         {
             var newElement = document.createElement("span");
-            newElement.innerHTML = "<img src='http://39.107.120.123/saoraoqi/img/"+i+".jpg' style='width: 95px; height: 95px;' width='240px' height='240px'> </img>";
+            newElement.innerHTML = "<img src='https://fqr-qwq.cn/project/saoraoqi/img/"+i+".jpg' style='width: 95px; height: 95px;' width='240px' height='240px'> </img>";
             newElement.style.width="95px";
             newElement.style.height="95px";
             newElement.onclick=Function("choose_img("+i+")");
@@ -174,7 +174,7 @@
 
         function choose_img(x)
         {
-            document.getElementById('previewImage').src="http://39.107.120.123/saoraoqi/img/"+x+".jpg";
+            document.getElementById('previewImage').src="https://fqr-qwq.cn/project/saoraoqi/img/"+x+".jpg";
             document.getElementById("imgs").style.display="none";
         }
 
